--- a/dev/less/import/header.less
+++ b/dev/less/import/header.less
@@ -1,3 +1,4 @@
+
 .header{
 	background-color: pink;
 	&-wrap{
@@ -10,11 +11,14 @@
 			font-size: 2rem;
 		}
 	}
+	&-box{
+		.inline-block;
+		width: 200px;
+	}
 	.nav{
 		margin-bottom: 20px;
 		li{
-			display: inline-block;
-			vertical-align: top;
+			.inline-block;
 			a{
 				display: block;
 				height: 100%;
